Clase07/despliegue-google/backend1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend1-app
  labels:
    app: backend1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend1-app
  template:
    metadata:
      labels:
        app: backend1-app
    spec:
      containers:
        - name: backend1-container
          image: gcr.io/microservicios03/backend1
          imagePullPolicy: Always
          ports:
            - containerPort: 3010
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3010
            initialDelaySeconds: 20
            periodSeconds: 15
